--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chetan</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    chetan
+    <div id="headers">
+      <div id="container">
+        <nav id="nav-menu">
+          <img src="/images/logo.png" alt="" class="logo" />
+          <ul>
+            <li><a href="" class="nav-link home">Home</a></li>
+            <li><a href="" class="nav-link about">About</a></li>
+            <li><a href="" class="nav-link skills">Skill</a></li>
+            <li><a href="" class="nav-link projects">Projects</a></li>
+            <li><a href="" class="nav-link contact">Contact</a></li>
+            <!-- Element linked to Resume : class="nav-link resume" baki hai -->
+          </ul>
+        </nav>
+        <div style="display: flex">
+          <div class="header-text">
+            <p>Full Stack Developer</p>
+            <h1 id="user-detail-name">
+              Hi, I'm <br /><span>Chetan</span>
+              Chauhan
+            </h1>
+            <p id="user-detail-intro">
+              An adept Full Stack Developer with hands-on experience in the MERN
+              stack, capable of designing and delivering complex web
+              applications. Experienced in web development with a focus on
+              creating responsive and user-friendly web interfaces. Skilled in
+              building scalable and robust web applications. Possessing
+              exceptional problem-solving skills, an ideal fit for a challenging
+              position.
+            </p>
+          </div>
+          <img
+            src="images/myimg2.png"
+            alt=""
+            style="
+              /* border: 1px solid white; */
+              padding-top: 15%;
+              padding-bottom: 10%;
+            "
+            class="home-img"
+          />
+        </div>
+      </div>
+    </div>
+    <div id="about" class="about section"></div>
   </body>
 </html>
