--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav id="nav-menu">
           <img src="/images/logo.png" alt="" class="logo" />
           <ul>
-            <li><a href="" class="nav-link home">Home</a></li>
+            <li><a href="#home" class="nav-link home">Home</a></li>
             <li><a href="#about" class="nav-link about">About</a></li>
             <li><a href="#skills" class="nav-link skills">Skill</a></li>
             <li><a href="#projects" class="nav-link projects">Projects</a></li>
@@ -41,7 +41,7 @@
             </li>
           </ul>
         </nav>
-        <div style="display: flex">
+        <div id="home" style="display: flex">
           <div class="header-text">
             <p>Full Stack Developer</p>
             <h1 id="user-detail-name">
