--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             <li><a href="#about" class="nav-link about">About</a></li>
             <li><a href="#skills" class="nav-link skills">Skill</a></li>
             <li><a href="#projects" class="nav-link projects">Projects</a></li>
-            <li><a href="" class="nav-link contact">Contact</a></li>
+            <li><a href="#contact" class="nav-link contact">Contact</a></li>
             <li>
               <a
+                id="resume-link-1"
                 href="https://drive.google.com/file/d/1njeowS1QBWYIFw6hZ0m7Gkd84Zwyp2X6/view?usp=sharing"
                 class="nav-link resume"
                 >Resume</a
@@ -48,7 +49,9 @@
               Hi, I'm <br /><span>Chetan</span>
               Chauhan
             </h1>
-            <a href="/images/Resume.pdf" download class="btn">Resume</a>
+            <a id="resume-link-2" href="/images/Resume.pdf" download class="btn"
+              >Resume</a
+            >
           </div>
         </div>
       </div>
@@ -75,62 +78,62 @@
       <h1>techstack</h1>
       <div id="techstack">
         <div>
-          <img src="/images/1.png" alt="" />
-          <h3>Html</h3>
+          <img class="skills-card-img" src="/images/1.png" alt="" />
+          <h3 class="skills-card-name">Html</h3>
         </div>
         <div>
-          <img src="/images/2.png" alt="" />
-          <h3>Css</h3>
+          <img class="skills-card-img" src="/images/2.png" alt="" />
+          <h3 class="skills-card-name">Css</h3>
         </div>
         <div>
-          <img src="/images/3.png" alt="" />
-          <h3>JavaScript</h3>
+          <img class="skills-card-img" src="/images/3.png" alt="" />
+          <h3 class="skills-card-name">JavaScript</h3>
         </div>
         <div>
-          <img src="/images/4.png" alt="" />
-          <h3>React</h3>
+          <img class="skills-card-img" src="/images/4.png" alt="" />
+          <h3 class="skills-card-name">React</h3>
         </div>
         <div>
-          <img src="/images/5.png" alt="" />
-          <h3>Redux</h3>
+          <img class="skills-card-img" src="/images/5.png" alt="" />
+          <h3 class="skills-card-name">Redux</h3>
         </div>
         <div>
-          <img src="/images/6.png" alt="" />
-          <h3>Git & GitHub</h3>
+          <img class="skills-card-img" src="/images/6.png" alt="" />
+          <h3 class="skills-card-name">Git & GitHub</h3>
         </div>
         <div>
-          <img src="/images/7.png" alt="" />
-          <h3>Node Js</h3>
+          <img class="skills-card-img" src="/images/7.png" alt="" />
+          <h3 class="skills-card-name">Node Js</h3>
         </div>
         <div>
-          <img src="/images/8.png" alt="" />
-          <h3>Express Js</h3>
+          <img class="skills-card-img" src="/images/8.png" alt="" />
+          <h3 class="skills-card-name">Express Js</h3>
         </div>
         <div>
-          <img src="/images/9.png" alt="" />
-          <h3>MongoDB</h3>
+          <img class="skills-card-img" src="/images/9.png" alt="" />
+          <h3 class="skills-card-name">MongoDB</h3>
         </div>
         <div>
-          <img src="/images/10.png" alt="" />
-          <h3>DSA</h3>
+          <img class="skills-card-img" src="/images/10.png" alt="" />
+          <h3 class="skills-card-name">DSA</h3>
         </div>
         <div>
-          <img src="/images/11.png" alt="" />
-          <h3>Vs Code</h3>
+          <img class="skills-card-img" src="/images/11.png" alt="" />
+          <h3 class="skills-card-name">Vs Code</h3>
         </div>
         <div>
-          <img src="/images/12.png" alt="" />
-          <h3>Netlify</h3>
+          <img class="skills-card-img" src="/images/12.png" alt="" />
+          <h3 class="skills-card-name">Netlify</h3>
         </div>
       </div>
     </div>
     <div id="projects">
       <h1>Projects</h1>
       <div id="main_projects">
-        <div>
+        <div class="project-card">
           <img src="/images/specxy.png" alt="" />
-          <h4>Specxy</h4>
-          <p>
+          <h4 class="project-title">Specxy</h4>
+          <p class="project-description">
             Specxy is an clone of Lenskart which typically offers a range of
             glasses and sunglasses for purchase, with options for multiple
             Frames.
@@ -140,20 +143,25 @@
             Login-Signup,Admin-Side,Sortfunctionality,Add to Cart,Payment page.
           </p>
           <h4>Tech Stack:-</h4>
-          <ul>
+          <ul class="project-tech-stack">
             <li>Html</li>
             <li>Css</li>
             <li>JavaScript</li>
           </ul>
           <p>A collaborative project built by team of 5 members in 5 days.</p>
           <br />
-          <a href="https://github.com/GaneshYadav3142/rotten-snakes-6255"
+          <a
+            class="project-github-link"
+            href="https://github.com/GaneshYadav3142/rotten-snakes-6255"
             ><p>
               <i class="fa-brands fa-github" style="color: #ff004f"></i>&nbsp
               Code Base
             </p></a
           >
-          <a href="https://glittering-cucurucho-a9b3ca.netlify.app/">
+          <a
+            class="project-deployed-link"
+            href="https://glittering-cucurucho-a9b3ca.netlify.app/"
+          >
             <p>
               <i class="fa-solid fa-link" style="color: #ff004f"></i>&nbsp Go to
               Live Project
@@ -170,7 +178,7 @@
             </p>
           </a>
         </div>
-        <div>
+        <div class="project-card">
           <img src="/images/cozmo store.png" alt="" />
           <h4>COZMO STORE</h4>
           <p>
