--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     <div id="projects">
       <h1>Projects</h1>
       <div id="main_projects">
+        <!-- project 1 -->
         <div class="project-card">
           <img src="/images/specxy.png" alt="" />
           <h4 class="project-title">Specxy</h4>
@@ -178,10 +179,11 @@
             </p>
           </a>
         </div>
+        <!-- project 2 -->
         <div class="project-card">
           <img src="/images/cozmo store.png" alt="" />
-          <h4>COZMO STORE</h4>
-          <p>
+          <h4 class="project-title">COZMO STORE</h4>
+          <p class="project-description">
             COZMO STORE is a clone of Store.com which is USA based E-commerce
             website that sells variety of products like furniture, Electronics,
             clothing etc. .
@@ -189,20 +191,125 @@
           <h4>Features:-</h4>
           <p>Login-Signup,Add to Cart,Payment page</p>
           <h4>Tech Stack:-</h4>
-          <ul>
+          <ul class="project-tech-stack">
             <li>HTML</li>
             <li>Css</li>
             <li>JavaScript</li>
             <li>React</li>
             <li>API</li>
           </ul>
-          <a href="https://github.com/chetan791/-giving-tramp-6540"
+          <a
+            class="project-github-link"
+            href="https://github.com/chetan791/-giving-tramp-6540"
             ><p>
               <i class="fa-brands fa-github" style="color: #ff004f"></i>&nbsp
               Code Base
             </p></a
           >
-          <a href="https://super-gecko-3de993.netlify.app/">
+          <a
+            class="project-deployed-link"
+            href="https://super-gecko-3de993.netlify.app/"
+          >
+            <p>
+              <i class="fa-solid fa-link" style="color: #ff004f"></i>&nbsp Go to
+              Live Project
+              <span
+                style="
+                  background-color: #ff004f;
+                  padding: 3px 10px;
+                  border-radius: 5px;
+                  margin-left: 10px;
+                  color: white;
+                "
+                >Live</span
+              >
+            </p>
+          </a>
+        </div>
+        <!-- project 3 -->
+        <div class="project-card">
+          <img src="/images/InfinityFit.png" alt="" />
+          <h4 class="project-title">COZMO STORE</h4>
+          <p class="project-description">
+            Discover Infinity Fit: Your ultimate fitness website for
+            personalized exercise recommendations, a customized exercise
+            dashboard, and a structured daily workout routine. Achieve your
+            dream physique with us today!
+          </p>
+          <h4>Features:-</h4>
+          <p>Login-Signup,view Workouts,add Excercises to your dashboard</p>
+          <h4>Tech Stack:-</h4>
+          <ul class="project-tech-stack">
+            <li>HTML</li>
+            <li>Css</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>API</li>
+            <li>NodeJS</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+          </ul>
+          <a
+            class="project-github-link"
+            href="https://github.com/ShudhanshuShekhar123/chic-smell-305"
+            ><p>
+              <i class="fa-brands fa-github" style="color: #ff004f"></i>&nbsp
+              Code Base
+            </p></a
+          >
+          <a
+            class="project-deployed-link"
+            href="https://64be51a6ab20dc00afc7c22f--kaleidoscopic-sfogliatella-728005.netlify.app/"
+          >
+            <p>
+              <i class="fa-solid fa-link" style="color: #ff004f"></i>&nbsp Go to
+              Live Project
+              <span
+                style="
+                  background-color: #ff004f;
+                  padding: 3px 10px;
+                  border-radius: 5px;
+                  margin-left: 10px;
+                  color: white;
+                "
+                >Live</span
+              >
+            </p>
+          </a>
+        </div>
+        <!-- project 4 -->
+        <div class="project-card">
+          <img src="/images/Travel.png" alt="" />
+          <h4 class="project-title">COZMO STORE</h4>
+          <p class="project-description">
+            Travel.com is a hotel booking website where user can book different
+            holiday packages and flights and cars bookings across the different
+            paart of the world.
+          </p>
+          <h4>Features:-</h4>
+          <p>Login-Signup,book your flight,Payment page</p>
+          <h4>Tech Stack:-</h4>
+          <ul class="project-tech-stack">
+            <li>HTML</li>
+            <li>Css</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>API</li>
+            <li>Redux</li>
+            <li>chakraUI</li>
+          </ul>
+          <a
+            class="project-github-link"
+            href="https://github.com/vaibhav7895/dapper-nation-4838"
+            ><p>
+              <i class="fa-brands fa-github" style="color: #ff004f"></i>&nbsp
+              Code Base
+            </p></a
+          >
+          <a
+            class="project-deployed-link"
+            href="https://travel-lovat-eight.vercel.app/"
+          >
             <p>
               <i class="fa-solid fa-link" style="color: #ff004f"></i>&nbsp Go to
               Live Project
