--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
         <p id="user-detail-intro">
           An adept Full Stack Developer with hands-on experience in the MERN
           stack, capable of designing and delivering complex web applications.
-          Experienced in web development with a focus on creating responsive and
-          user-friendly web interfaces. Skilled in building scalable and robust
-          web applications. Possessing exceptional problem-solving skills, an
-          ideal fit for a challenging position.
+          Experienced in web development including
+          HTML,Css,JavaScript,React,Redux with a focus on creating responsive
+          and user-friendly web interfaces. Skilled in building scalable and
+          robust web applications. Possessing exceptional problem-solving
+          skills, an ideal fit for a challenging position.
         </p>
         <div id="copy">
           <p>Drop a mail</p>
