--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <ul>
             <li><a href="#home" class="nav-link home">Home</a></li>
             <li><a href="#about" class="nav-link about">About</a></li>
-            <li><a href="#skills" class="nav-link skills">Skill</a></li>
+            <li><a href="#skills" class="nav-link skills">Skills</a></li>
             <li><a href="#projects" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
             <li>
@@ -133,6 +133,58 @@
       <div id="main_projects">
         <!-- project 1 -->
         <div class="project-card">
+          <img src="/images/charityhero.png" alt="" />
+          <h4 class="project-title">Specxy</h4>
+          <p class="project-description">
+            Charityhero is a fund raiser website which help you to get funds
+            online form anyone.
+          </p>
+          <h4>Features:-</h4>
+          <p>Login-Signup,Sortfunctionality,Payment page,CRUD operations.</p>
+          <h4>Tech Stack:-</h4>
+          <ul class="project-tech-stack">
+            <li>HTML</li>
+            <li>Css</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Redux</li>
+            <li>API</li>
+            <li>NodeJS</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+          </ul>
+          <p>A collaborative project built by team of 5 members in 5 days.</p>
+          <br />
+          <a
+            class="project-github-link"
+            href="https://github.com/neo1710/tart-clover-1298"
+            ><p>
+              <i class="fa-brands fa-github" style="color: #ff004f"></i>&nbsp
+              Code Base
+            </p></a
+          >
+          <a
+            class="project-deployed-link"
+            href="https://charityhero.vercel.app/"
+          >
+            <p>
+              <i class="fa-solid fa-link" style="color: #ff004f"></i>&nbsp Go to
+              Live Project
+              <span
+                style="
+                  background-color: #ff004f;
+                  padding: 3px 10px;
+                  border-radius: 5px;
+                  margin-left: 10px;
+                  color: white;
+                "
+                >Live</span
+              >
+            </p>
+          </a>
+        </div>
+        <!-- project 2 -->
+        <div class="project-card">
           <img src="/images/specxy.png" alt="" />
           <h4 class="project-title">Specxy</h4>
           <p class="project-description">
@@ -163,53 +215,6 @@
           <a
             class="project-deployed-link"
             href="https://glittering-cucurucho-a9b3ca.netlify.app/"
-          >
-            <p>
-              <i class="fa-solid fa-link" style="color: #ff004f"></i>&nbsp Go to
-              Live Project
-              <span
-                style="
-                  background-color: #ff004f;
-                  padding: 3px 10px;
-                  border-radius: 5px;
-                  margin-left: 10px;
-                  color: white;
-                "
-                >Live</span
-              >
-            </p>
-          </a>
-        </div>
-        <!-- project 2 -->
-        <div class="project-card">
-          <img src="/images/cozmo store.png" alt="" />
-          <h4 class="project-title">COZMO STORE</h4>
-          <p class="project-description">
-            COZMO STORE is a clone of Store.com which is USA based E-commerce
-            website that sells variety of products like furniture, Electronics,
-            clothing etc. .
-          </p>
-          <h4>Features:-</h4>
-          <p>Login-Signup,Add to Cart,Payment page</p>
-          <h4>Tech Stack:-</h4>
-          <ul class="project-tech-stack">
-            <li>HTML</li>
-            <li>Css</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>API</li>
-          </ul>
-          <a
-            class="project-github-link"
-            href="https://github.com/chetan791/-giving-tramp-6540"
-            ><p>
-              <i class="fa-brands fa-github" style="color: #ff004f"></i>&nbsp
-              Code Base
-            </p></a
-          >
-          <a
-            class="project-deployed-link"
-            href="https://super-gecko-3de993.netlify.app/"
           >
             <p>
               <i class="fa-solid fa-link" style="color: #ff004f"></i>&nbsp Go to
