--- a/index.html
+++ b/index.html
@@ -78,51 +78,51 @@
     <div id="skills">
       <h1>techstack</h1>
       <div id="techstack">
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/1.png" alt="" />
           <h3 class="skills-card-name">Html</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/2.png" alt="" />
           <h3 class="skills-card-name">Css</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/3.png" alt="" />
           <h3 class="skills-card-name">JavaScript</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/4.png" alt="" />
           <h3 class="skills-card-name">React</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/5.png" alt="" />
           <h3 class="skills-card-name">Redux</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/6.png" alt="" />
           <h3 class="skills-card-name">Git & GitHub</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/7.png" alt="" />
           <h3 class="skills-card-name">Node Js</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/8.png" alt="" />
           <h3 class="skills-card-name">Express Js</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/9.png" alt="" />
           <h3 class="skills-card-name">MongoDB</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/10.png" alt="" />
           <h3 class="skills-card-name">DSA</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/11.png" alt="" />
           <h3 class="skills-card-name">Vs Code</h3>
         </div>
-        <div>
+        <div class="skills-card">
           <img class="skills-card-img" src="/images/12.png" alt="" />
           <h3 class="skills-card-name">Netlify</h3>
         </div>
