--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
             <li>
               <a
+                target="_blank"
                 id="resume-link-1"
                 href="https://drive.google.com/file/d/1njeowS1QBWYIFw6hZ0m7Gkd84Zwyp2X6/view?usp=sharing"
                 class="nav-link resume"
