--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#skills" class="nav-link skills">Skills</a></li>
             <li><a href="#projects" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
-            <li>
+            <li id="resume-button-1">
               <a
                 target="_blank"
                 id="resume-link-1"
@@ -49,7 +49,7 @@
             <h1 id="user-detail-name">
               Hi, I'm <br /><span>Chetan</span>
               Chauhan
-            </h1>
+            </h1 id="resume-button-2">
             <a id="resume-link-2" href="/images/Resume.pdf" download class="btn"
               >Resume</a
             >
