fixed city in contact section

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                 <h3 class="h4 contact-item-title">Address:</h3>
 
                 <address class="contact-info">
-                  mumbai, Maharashtra, India
+                  Mumbai, Maharashtra, India
                 </address>
               </div>
 
