fixed github link for paltoo

--- a/index.html
+++ b/index.html
@@ -604,7 +604,8 @@
                   <h3 class="h4 project-title">Paltoo</h3>
                 </div>
                 <div class="project-links">
-                  <a><img
+                  <a href="https://github.com/CODEwithSANKETj/vivid-roll-405" target=”_blank”>
+                    <img
                       src="./assets/images/github-link-icon.png" class="project-github-link"/>
                   </a>
               <a href="https://vivid-roll-405.vercel.app/"> <img src="./assets/images/deployed-link-icon.png" class="project-deployed-link"/></a>
