--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                 </li>
 
                 <li>
-                  <a href="https://www.linkedin.com/in/saurabh-maske" target="_blank" class="contact-social-link" id="contact-linkedin">
+                  <a href="https://www.linkedin.com/in/chetan-chauhan-48a234251/" target="_blank" class="contact-social-link" id="contact-linkedin">
                     <div class="tooltip">Linkedin</div>
 
                     <ion-icon name="logo-linkedin"></ion-icon>
