updated footer name

--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
 
       <p class="h1 logo">
         <a href="#">
-         chetan Chauhan<span>.</span>
+         Chetan Chauhan<span>.</span>
         </a>
       </p>
 
