--- a/index.html
+++ b/index.html
@@ -408,6 +408,16 @@
 
             <li>
               <div class="skills-card">
+                <div class="tooltip skills-card-name">Postman</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/postman.png" alt="Postman logo" class="skills-card-img">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="skills-card">
                 <div class="tooltip skills-card-name">Command Line</div>
                 <div class="card-icon">
                   <img src="./assets/images/command.png" alt="Command Line logo" class="skills-card-img">
