--- a/index.html
+++ b/index.html
@@ -629,6 +629,30 @@
             </div>
           </li>
 
+<!-- Project 6 -->
+<li>
+  <div class="project-card">
+    <img src="/assets//images/Syncly.png" class="w-1001" alt="">
+
+    <div class="card-content">
+      <div class="project-name">
+        <h3 class="h4 project-title">Syncly</h3>
+      </div>
+      <div class="project-links">
+        <a href="https://github.com/chetan791/DataNexify" target=”_blank”>
+          <img
+            src="./assets/images/github-link-icon.png" class="project-github-link"/>
+        </a>
+    <a href="https://data-nexify-two.vercel.app/"> <img src="./assets/images/deployed-link-icon.png" class="project-deployed-link"/></a>
+         
+        
+      </div>
+    </div>
+    <div class="project-description">
+      <p>Syncly is a google calendar intigrated platform which allows users to schedule and manage their events and meetings efficiently.</p>
+    </div>
+  </div>
+</li>
         </ul>
 
       </section>
